# mal-dotshix

./: Makefile.impls  README.md
impls/rust-dotshix/: Cargo.toml  Makefile  run
impls/rust-dotshix/src/: core.rs  env.rs  mal.pest  printer.rs  reader.rs  step0_repl.rs  step1_read_print.rs  step2.rs  step2_eval.rs  step3_env.rs  step4_if_fn_do.rs
