[package]
name = "rust-dotshix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
pest = "2.7.10"
pest_derive = "2.7.10"
rustyline = "14.0.0"

[[bin]]
name = "step4_if_fn_do"
path = "src/step4_if_fn_do.rs"
